ftransc 4.2.0 (03 Dec 2011):
	+ removed quality presets from code and placed them in a separate file
	/etc/ftransc/presets.
	+ added new option to specify a custom preset file: --presets

ftransc 4.1.9 (03 Dec 2011):
	+ reverted back metadata extraction method to earlier revision.

ftransc 4.1.8 (24 Nov 2011):
	+ Adding logging for executing as nautilus script

ftransc 4.1.7 (20 Nov 2011):
	+ Adding the options: -s/--silent, -l/--log, --debug, --notify
	+ Fixed metadata issue with the year tag when converting from FLAC format.

ftransc 4.1.6 (20 Nov 2011):
	+ Adding mpc format support on ftransc nautilus scripts.

ftransc 4.1.5 (20 Nov 2011):
	+ extracting .wmv video metadata when extracting audio conntent from .wmv
	video.

ftransc 4.1.4 (20 Nov 2011):
	+ fixed issue of not dropping support to encode to some format when
	the necessary dependency is not installed.

ftransc 4.1.3 (13 Nov 2011):
	+ minor changes.

ftransc 4.1.1 (16 Oct 2011):
	+ added musepack audio format support.
	+ added the -n / --no-tags option.

ftransc 4.1.0 (16 Oct 2011):
	+ added ftransc GUI, 'ftransc_qt'.
	+ Explicitly drop support for python-mutagen versions older than 1.17.

ftransc 4.0.6 (30 Sep 2011):
	+ now using os.path.splitext() instead of a custom built function.
	+ printing summary statistics of time taken to encode all files and
	average time taken per file.
	+ added 'nautilus scripts' functionality.

ftransc 4.0.5 (25 Sep 2011):
	+ added the --upgrade option.

ftransc 4.0.4 (25 Sep 2011):
	+ added notify-send summary notification
	+ fixed the issue with left over temporary .wav files when converting to
	FLAC format.

ftransc 4.0.3 (17 Apr 2011):
	+ no need to 'cd' to folder first before running ftransc.
	+ /tmp/ftransc.log is not created anymore.
	+ order of input files is sorted
	+ prints out duration of conversion in seconds

ftransc 4.0.1 (05 Apr 2011):
	+ disable support of functionality when its dependency is not installed.