@@ -10,6 +10,7 @@ tiny    = --cbr -b 32 -m m -s 32
 insane  = -q 10
 extreme = -q 8
 high    = -q 6
+normal  = -q 3
 low     = -q 1
 tiny    = -q -1
 
