@@ -1,0 +1,69 @@
+tags = {
+        '.mp3': {
+            'artist'      : 'TPE1',
+            'album'       : 'TALB',
+            'title'       : 'TIT2',
+            'genre'       : 'TCON',
+            'year'        : 'TDRC',
+            'tracknumber' : 'TRCK',
+            'composer'    : 'TCOM',
+            'publisher'   : 'TPUB',
+        },
+        '.wma': {
+            'artist'      : 'Author',
+            'album'       : 'WM/AlbumTitle',
+            'title'       : 'Title',
+            'genre'       : 'WM/Genre',
+            'year'        : 'WM/Year',
+            'tracknumber' : 'WM/TrackNumber',
+            'composer'    : 'WM/Composer',
+            'publisher'   : 'WM/Publisher',
+            },
+        '.wmv': {
+            'artist'      : 'Author',
+            'album'       : 'WM/AlbumTitle',
+            'title'       : 'Title',
+            'genre'       : 'WM/Genre',
+            'year'        : 'WM/Year',
+            'tracknumber' : 'WM/TrackNumber',
+            'composer'    : 'WM/Composer',
+            'publisher'   : 'WM/Publisher',
+            },
+        '.m4a': {
+            'artist'      : '\xa9ART',
+            'album'       : '\xa9alb',
+            'title'       : '\xa9nam',
+            'genre'       : '\xa9gen',
+            'year'        : '\xa9day',
+            'tracknumber' : 'trkn',
+            'composer'    : '\xa9wrt',
+            },
+        '.ogg': {
+            'artist'      : 'artist',
+            'album'       : 'album',
+            'title'       : 'title',
+            'genre'       : 'genre',
+            'year'        : 'date',
+            'tracknumber' : 'tracknumber',
+            'composer'    : 'composer',
+            },
+        '.flac': {
+            'artist'      : 'artist',
+            'album'       : 'album',
+            'title'       : 'title',
+            'genre'       : 'genre',
+            'year'        : 'date',
+            'tracknumber' : 'tracknumber',
+            'composer'    : 'composer',
+            },
+        '.mpc': {
+            'artist'      : 'Artist',
+            'album'       : 'Album',
+            'title'       : 'Title',
+            'genre'       : 'Genre',
+            'year'        : 'Year',
+            'tracknumber' : 'Track',
+            'composer'    : 'Composer',
+            },
+        }
+
